# at_work_central_factory_hub_examples

./: .gitmodules  CMakeLists.txt  README.md
at_work_robot_example/: CMakeLists.txt
at_work_robot_example_ros/: CMakeLists.txt  package.xml
at_work_robot_example_ros/msg/: BenchmarkFeedback.msg  BenchmarkScenario.msg  BenchmarkState.msg  DrillingMachineCommand.msg  DrillingMachineStatus.msg  Inventory.msg  Item.msg  LocationIdentifier.msg  ObjectIdentifier.msg  Order.msg  OrderInfo.msg  RobotStatusReport.msg  Transaction.msg  TriggeredConveyorBeltCommand.msg  TriggeredConveyorBeltStatus.msg
at_work_robot_example_ros/ros/include/at_work_robot_example_ros/: robot_example_ros.h
at_work_robot_example_ros/ros/launch/: robot_example_ros.launch
at_work_robot_example_ros/ros/src/: robot_example_ros.cpp  robot_example_ros_node.cpp
